# dark-podval-sources

./: CMakeLists.txt  FindSteamworks.cmake  README.md
data/: settings.ini
data/config/: achievements.txt  blocks-dev.txt  blocks.txt  items.txt
data/levels/custom/: 06-09.lvl  06-10.lvl  07-03.lvl  level.lvl
data/levels/standart/: 01-01.lvl  01-02.lvl  01-03.lvl  01-04.lvl  01-05.lvl  01-06.lvl  01-07.lvl  01-08.lvl  01-09.lvl  01-10.lvl  01-11.lvl  02-01.lvl  02-02.lvl  02-03.lvl  02-04.lvl  02-05.lvl  02-06.lvl  02-07.lvl  02-08.lvl  02-09.lvl  02-10.lvl  02-11.lvl  03-01.lvl  03-02.lvl  03-03.lvl  03-04.lvl  03-05.lvl  03-06.lvl  03-07.lvl  03-08.lvl  03-09.lvl  03-10.lvl  03-11.lvl  04-01.lvl  04-02.lvl  04-03.lvl  04-04.lvl  04-05.lvl  04-06.lvl  04-07.lvl  (+26 more)
data/locales/en/: about.txt  achievements.txt  cnames.txt  controller-exit.txt  controller-need.txt  intro.txt  items.txt  lnames.txt  questions.txt  replies.txt  strings.txt
data/locales/ru/: about.txt  achievements.txt  cnames.txt  controller-exit.txt  controller-need.txt  intro.txt  items.txt  lnames.txt  questions.txt  replies.txt  strings.txt
data/profiles/: 0.pfl
src/: Android.mk  main.cpp
src/SDL_FontCache/: Android.mk  CMakeLists.txt
src/inifile/: inifile.cpp
